# grape-planit

./: .env.example  .gitignore  DATABASE_USAGE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: README.md
.github/workflows/: build.yml  release.yml
.trae/rules/: project_rules.md
config/: countdown.json
docs/: DEPLOYMENT.md
scripts/: release.js  release.ps1
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/src/: config.rs  countdown.rs  database.rs  holiday.rs  lib.rs  main.rs  motivation.rs  todo.rs  window_commands.rs
src/api/: ai.ts  database.ts  holiday.ts  index.ts  motivation.ts  services.ts  shortcut.ts  todo.ts  weather.ts  window.ts
src/common/: ai.ts  date.ts  prompt.ts  weather.ts
src/components/: AIExample.vue  AppHeader.vue  CalendarView.vue  CategoryView.vue  Close.vue  ConfigTip.vue  CustomCountdownSettings.vue  DatabaseExample.vue  DefaultTime.vue  Empty.vue  FinalCountdownOverlay.vue  HeaderRight.vue  Icon.vue  ListView.vue  Modal.vue  ModeToggle.vue  SettingsBtn.vue  ThemeToggle.vue  TopTimeDisplay.vue  WeatherBackground.vue  WorkEndSettings.vue
src/composables/: useCarousel.ts  useDatabase.ts  useTheme.ts  useTime.ts  useTimer.ts
src/layout/: index.vue
src/model/: ai.ts  countdown.ts  holiday.ts  public.ts  settings.ts  todo.ts  weather.ts  window.ts
src/router/: index.ts
src/store/: app.ts  finalCountdown.ts  mode.ts  weather.ts
src/views/: About.vue  AddTodo.vue  Calendar.vue  (+3 more)
(+11 files in other folders)
